fixed path issue

--- a/website.html
+++ b/website.html
@@ -144,7 +144,7 @@
 </header>
 
 <div id="sidebar">
-    <img src="Photoroom.png" alt="Klevis Resuli">
+    <img src="images/Photoroom.png" alt="Klevis Resuli">
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About</a>
