--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             display: flex;
-            height: 100vh;
-            overflow: hidden;
+            flex-direction: column;
+            min-height: 100vh;
             background-color: #f5f5f5;
             color: #333;
         }
@@ -30,11 +30,11 @@
             background: #023e8a;
             color: #fff;
             width: 250px;
-            height: 100vh;
             position: fixed;
+            top: 4rem;
+            bottom: 0;
             padding: 1rem;
             box-sizing: border-box;
-            top: 4rem;
             overflow-y: auto;
             box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
         }
@@ -77,9 +77,9 @@
             padding: 2rem;
             padding-top: 6rem;
             box-sizing: border-box;
-            height: 100vh;
-            overflow-y: auto;
             width: calc(100% - 270px);
+            min-height: calc(100vh - 4rem);
+            overflow-y: auto;
         }
         .section {
             margin-bottom: 2rem;
@@ -134,6 +134,30 @@
         footer a:hover {
             background: #fff;
             color: #0a66c2;
+        }
+
+        @media (max-width: 768px) {
+            #sidebar {
+                width: 200px;
+            }
+            .content-container {
+                margin-left: 210px;
+                width: calc(100% - 210px);
+            }
+        }
+
+        @media (max-width: 576px) {
+            #sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+                box-shadow: none;
+            }
+            .content-container {
+                margin-left: 0;
+                width: 100%;
+                padding-top: 1rem;
+            }
         }
     </style>
 </head>
