--- a/index.html
+++ b/index.html
@@ -349,11 +349,12 @@
 
         <h3>Work Experience</h3>
         <p><strong>NTNU</strong><br>
-            Student Assistant (Jun. 2024 – Sept. 2024) - Trondheim, NO</p>
+            Summer Internship  (Jun. 2024 – Sept. 2024) - Trondheim, NO</p>
             <ul>
-                <li>Implemented a telecommunication system using ESP32-WiFi-MESH, deploying 17 nodes across the campus.</li>
-                <li>Achieved a 95% success rate in data delivery to the root node and enhanced real-time data access for Madagascar Nanogrids by Nanoe.</li>
-                <li>Mapped the campus network, showcasing the system’s scalability and potential for broader applications.</li>
+                <li>Collaborated with Nanoe on the Energica project to develop a nanogrid telecommunication system using
+                    ESP32-WIFI-MESH.</li>
+                <li>Used RS485 protocol for reliable communication between ESP32 devices and the nanogrid controller.</li>
+                <li>Maintained an MQTT-based system for real-time monitoring with integration to PostgreSQL databases</li>
             </ul>
         <p><strong>Kineton Albania</strong><br>
             Test Engineer (Sept. 2022 – Aug. 2023) - Tirana, AL</p>
