--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
-    <p>klevisresuli@outlook.com<br>(+47) 41195239<br>Kaiserslautern, DE</p>
+    <p>klevisresuli@outlook.com<br>(+47) 41195239<br>Trondheim, NO</p>
 
     <a href="https://www.linkedin.com/in/klevis-resuli-a23497121/" class="linkedin" target="_blank">LinkedIn Profile</a> <br>
 
@@ -212,8 +212,11 @@
 <div class="content-container">
     <div class="section" id="home">
         <h2>Welcome</h2>
-        <p>Hello! I'm Klevis Resuli, an embedded systems enthusiast currently pursuing my Master's in Embedded Computing Systems. Welcome to my personal website where you can learn more about my skills, education, work experience, and projects.</p>
-        <p>Feel free to explore my projects and get in touch with me for any inquiries.</p>
+        <p>🛠️ <strong>Hello World!</strong><br>
+            I am <strong>Klevis Resuli</strong>, an embedded systems enthusiast who loves the challenge of making hardware and software communicate seamlessly.<br>
+            My expertise includes <strong>C/C++, RTOS, microcontrollers, and hardware-software integration</strong>.<br>
+            Explore my projects, where firmware meets innovation.
+            </p>
         <p><a href="resume/KlevisResuli_Resume.pdf" target="_blank">Download my Resume</a></p>
     </div>
 
@@ -332,7 +335,10 @@
 
 
     <div class="section" id="about">
-        <h2>About Me</h2>
+        <h2>About Me </h2>
+
+        <p>I am an embedded systems enthusiast currently pursuing an European Master in Embedded Computing Systems will a passion for electonics and technology.<br>
+         I enjoy working on projects that challenge me to think creatively and solve complex problems. My goal is to continue learning and growing as an engineer while contributing to innovative projects that make a positive impact on society.</p>
         <h3>Skills & Interests</h3>
         <p><strong>Technical Skills:</strong> Microcontrollers, C, C++, Python, Assembly, HDL, RTOS, Communication Protocols(I2C, SPI, CAN, UART, RS485), Build Tools, Gi t,
             MATLAB, Simulink, Linux, HIL testing, Problem Solving</p>
