update CV and added certifications

--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
         <h3>Education</h3>
         <p><strong>Norges teknisk-naturvitenskapelige universitet(NTNU) and Rheinland-Pfälzische Technische Universität Kaiserslautern-Landau(RPTU)</strong><br>
         MS, Embedded Computing Systems (Aug. 2023 - Present)</p>
-        <p><strong>First Year</strong><br>NTNU - Trondheim, NO, August 2023 - June 2024 </p>
-        <p><strong>Second Year</strong><br>RPTU - Kaiserslautern, DE, August 2024 - Current</p>
+        <p><strong>First Year</strong><br>NTNU - Trondheim, NO, August 2023 - August 2025 </p>
+        <p><strong>Second Year</strong><br>RPTU - Kaiserslautern, DE, August 2024 - August 2025</p>
         <p><strong>Polytechnic University of Tirana</strong><br>
         BS, Electronic Engineering (Oct. 2019 – Jul. 2022) - Tirana, AL</p>
 
@@ -369,7 +369,19 @@
                 <li>Developed Verification and Validation tests for latest automotive software using V-Cycle methodology.</li>
                 <li>Executed tests in hybrid environment to find bugs and report them.</li>
             </ul>
-    </div>
+            <h3>Certifications</h3>
+            <p><strong>nRF Connect SDK Fundamentals</strong><br>
+            Nordic Semiconductor (July 2024)</p>
+            <p><a href="https://academy.nordicsemi.com/check-certificate/7019A8677176D90-7019A8670F4125D-11EFA0107D2C39_38" target="_blank">View Certificate</a></p>
+                
+            <p><strong>Bluetooth Low Energy Fundamentals</strong><br>
+            Nordic Semiconductor (August 2024)</p>
+            <p><a href="https://academy.nordicsemi.com/check-certificate/7019A867CC0B531-7019A86769E2008-11EFA0107D2C39_38" target="_blank">View Certificate</a></p>
+            
+            <p><strong>Edge AI Fundamentals</strong><br>
+            Edge Impulse (April 2024)</p>
+            <p><a href="https://www.linkedin.com/in/klevis-resuli-a23497121/details/certifications/1744229841258/single-media-viewer/?profileId=ACoAAB4mTfsBkbWzSon_Am6b2SphJ7dJnIxKoC8" target="_blank">View Certificate</a></p>
+        </div>
 
     <div class="section" id="contact">
         <h2>Contact</h2>
