--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Klevis Resuli | <a href="https://www.linkedin.com/in/klevis-resuli-a23497121/" target="_blank">LinkedIn Profile</a> | <a href="https://github.com/klevisresuli" target="_blank">Github Profile</a> </p>
+    <p>&copy; <script>document.write(new Date().getFullYear());</script> Klevis Resuli | <a href="https://www.linkedin.com/in/klevis-resuli-a23497121/" target="_blank">LinkedIn Profile</a> | <a href="https://github.com/klevisresuli" target="_blank">Github Profile</a> </p>
 </footer>
 
 </body>
